# riscv_rust_test

./: Cargo.toml  Makefile  README.md  boot.s  build.rs  linker.ld  linker_dram.ld  linker_poyo.ld  linker_x.ld
.cargo/: config
c/: blink.c  notmain.c  poyoio.c  poyoio.h
src/: lib.rs  main.rs  my_heap.rs
