[package]
name = "hello"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]

[dependencies]
blisp = { path = "../../packages/blisp" }
linked_list_allocator = { path = "../../packages/linked-list-allocator", features=["use_spin"]}

[build-dependencies]
cc = "1.0.25"

[features]
alloc_error_handler = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
