[package]
name = "hello"
version = "0.1.0"
authors = ["tomoyuki-nakabayashi <tomo.wait.for.it.yuki@gmail.com>"]

[dependencies]
blisp = { path = "../../packages/blisp" }
linked_list_allocator = { path = "../../packages/linked-list-allocator", default-features=false}

[build-dependencies]
cc = "1.0.25"

[features]
alloc_error_handler = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies.spin]
version = "0.5.2"
path="../../packages/spin-rs"
